refactor: remove endpoints de teste e mantém apenas o health check
