# internal/api/handlers/health.go
@@ -1,25 +1,24 @@
 package handlers
 
 import (
-	"net/http"
 	"time"
 
 	"github.com/ElizCarvalho/k8s-resource-analyzer-api/internal/pkg/logger"
+	"github.com/ElizCarvalho/k8s-resource-analyzer-api/internal/pkg/response"
 	"github.com/gin-gonic/gin"
 )
 
 // PingResponse representa a resposta do endpoint /ping
 type PingResponse struct {
-	Message   string    `json:"message" example:"pong"`
-	Timestamp time.Time `json:"timestamp" example:"2024-02-18T00:00:00Z"`
 	Status    string    `json:"status" example:"ok"`
+	Timestamp time.Time `json:"timestamp" example:"2024-02-18T00:00:00Z"`
 }
 
 // @Summary Endpoint de health check
 // @Description Retorna pong se a API estiver funcionando
 // @Tags health
 // @Produce json
-// @Success 200 {object} PingResponse
+// @Success 200 {object} response.Response
 // @Router /ping [get]
 func PingHandler(c *gin.Context) {
 	timestamp := time.Now()
@@ -32,11 +31,10 @@ func PingHandler(c *gin.Context) {
 		Str("ip", c.ClientIP()).
 		Msg("Recebida requisição ping")
 
-	response := PingResponse{
-		Message:   "pong",
-		Timestamp: timestamp,
+	data := PingResponse{
 		Status:    "ok",
+		Timestamp: timestamp,
 	}
 
-	c.JSON(http.StatusOK, response)
+	response.Success(c, "pong", data)
 }
