# internal/api/middleware/request_id.go
@@ -1,0 +1,16 @@
+package middleware
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+)
+
+// RequestID adiciona um ID único para cada requisição
+func RequestID() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		requestID := uuid.New().String()
+		c.Set("RequestID", requestID)
+		c.Header("X-Request-ID", requestID)
+		c.Next()
+	}
+}
